samples/_failures_safe/1761704055_24c22d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cc5434f7.c: In function ‘initialize_mesh’:
./samples/SAFE/__tmp_cc5434f7.c:143:17: error: expected ‘;’ at end of input
  143 |     mesh->bounds
      |                 ^
      |                 ;
./samples/SAFE/__tmp_cc5434f7.c:143:5: error: expected declaration or statement at end of input
  143 |     mesh->bounds
      |     ^~~~
